--- a/html/company.html
+++ b/html/company.html
@@ -32,10 +32,10 @@
         <div class="header_1">
           <nav class="navbar">
             <ul>
-              <li><a href="#">TOP</a></li>
-              <li><a href="html/topics.html">TOPICS</a></li>
-              <li><a href="html/project.html">PROJECTS</a></li>
-              <li><a href="html/company.html">COMPANY</a></li>
+              <li><a href="../index.html">TOP</a></li>
+              <li><a href="../html/topics.html">TOPICS</a></li>
+              <li><a href="../html/project.html">PROJECTS</a></li>
+              <li><a href="../html/company.html">COMPANY</a></li>
             </ul>
           </nav>
         </div>
@@ -106,7 +106,7 @@
           <li><a href="../html/company.html">COMPANY</a></li>
         </ul>
         <ul>
-          <li><a href="../html/index.html">TOP</a></li>
+          <li><a href="../index.html">TOP</a></li>
           <li><a href="../html/topics.html">TOPICS</a></li>
         </ul>
       </div>
