--- a/html/project.html
+++ b/html/project.html
@@ -80,7 +80,7 @@
           <li><a href="../html/company.html">COMPANY</a></li>
         </ul>
         <ul>
-          <li><a href="../html/index.html">TOP</a></li>
+          <li><a href="../index.html">TOP</a></li>
           <li><a href="../html/topics.html">TOPICS</a></li>
         </ul>
       </div>
